--- a/style.css
+++ b/style.css
@@ -54,6 +54,13 @@ h2 {
     align-items: center;
 }
 
+h3 {
+    color: white;
+    font-size: 1.3em;
+    margin-top: 40px;
+    margin-bottom: 10px;
+}
+
 .board {
     display: flex;
     flex-direction: column;
@@ -89,13 +96,17 @@ h2 {
     border-left: 5px solid lightblue;
 }
 
+.restart {
+    cursor: pointer;
+}
+
 div[class*=line] {
     background-color: white;
 }
 
 .row1-line {
     width: 100%;
-    height: 5px;
+    height: 3px;
     position: absolute;
     top: 15%;
     display: none;
@@ -103,7 +114,7 @@ div[class*=line] {
 
 .row2-line {
     width: 100%;
-    height: 5px;
+    height: 3px;
     position: absolute;
     top: 49%;
     display: none;
@@ -111,7 +122,7 @@ div[class*=line] {
 
 .row3-line {
     width: 100%;
-    height: 5px;
+    height: 3px;
     position: absolute;
     top: 82%;
     display: none;
@@ -119,7 +130,7 @@ div[class*=line] {
 
 .column1-line {
     height: 100%;
-    width: 5px;
+    width: 3px;
     position: absolute;
     top: 0%;
     left: 16%;
@@ -128,7 +139,7 @@ div[class*=line] {
 
 .column2-line {
     height: 100%;
-    width: 5px;
+    width: 3px;
     position: absolute;
     top: 0%;
     left: 49.75%;
@@ -137,7 +148,7 @@ div[class*=line] {
 
 .column3-line {
     height: 100%;
-    width: 5px;
+    width: 3px;
     position: absolute;
     top: 0%;
     left: 83%;
@@ -146,7 +157,7 @@ div[class*=line] {
 
 .diagonal1-line {
     width: 100%;
-    height: 6px;
+    height: 3px;
     position: absolute;
     top: 49%;
     transform: skewY(45deg);
@@ -155,7 +166,7 @@ div[class*=line] {
 
 .diagonal2-line {
     width: 100%;
-    height: 6px;
+    height: 3px;
     position: absolute;
     top: 49%;
     transform: skewY(135deg);
