changed board from flexbox to CSS grid. Removed line strikethrough functionality

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
     background-color: black;
-    min-height: 100vh;
     display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
     font-family: 'Work Sans', sans-serif;
 }
 
@@ -61,39 +61,26 @@ h3 {
     margin-bottom: 10px;
 }
 
-.board {
-    display: flex;
-    flex-direction: column;
-    cursor: pointer;
-    position: relative;
+.board-overlay {
+    outline: 3px solid black;
+    outline-offset: -3px;
 }
 
-.row1, .row2, .row3 {
-    display: flex;
-    justify-content: center;
+.board {
+    display: grid;
+    grid-template-columns: repeat(3, 200px);
+    grid-template-rows: repeat(3, 200px);
+    cursor: pointer;
 }
 
 .square {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 200px;
-    width: 200px;
+    border: 3px solid lightblue;
+    display: grid;
+    place-items: center;
+    /* align-items: center;
+    justify-content: center; */
     color: white;
-    font-size: 190px;
-}
-
-.row2 .square {
-    border-top: 5px solid lightblue;
-    border-bottom: 5px solid lightblue;
-}
-
-.left {
-    border-right: 5px solid lightblue;
-}
-
-.right {
-    border-left: 5px solid lightblue;
+    font-size: 150px;
 }
 
 .restart {
