--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body {
     font-family: 'Work Sans', sans-serif;
 }
 
+/****************************************
+HEADER BAR 
+****************************************/
+
 header {
     background-color: lightblue;
     width: 100%;
@@ -24,7 +28,8 @@ header {
 }
 
 .settings {
-    padding-right: 10px
+    padding-right: 10px;
+    cursor: pointer;
 }
 
 .player {
@@ -54,11 +59,13 @@ h2 {
     align-items: center;
 }
 
-h3 {
-    color: white;
-    font-size: 1.3em;
-    margin-top: 40px;
-    margin-bottom: 10px;
+/****************************************
+GAME BOARD
+****************************************/
+
+main {
+    display: flex;
+    justify-content: space-between;
 }
 
 .board-overlay {
@@ -86,3 +93,38 @@ h3 {
 .restart {
     cursor: pointer;
 }
+
+h3 {
+    color: white;
+    font-size: 1.3em;
+    margin-top: 40px;
+    margin-bottom: 10px;
+}
+
+/****************************************
+SETTINGS
+****************************************/
+
+.settings-menu {
+    background-color: blue;
+    height: 100%;
+    left: 0;
+    top: 0;
+    position: absolute;
+    width: 60px;
+    transition: width 2s;
+    /* visibility: hidden;
+    opacity: 0;
+    transition: position 0.5s linear; */
+}
+
+
+.settings-menu:hover {
+    width: 250px
+}
+
+/* .settings-show {
+    width: 250px;
+    visibility: visible;
+    opacity: 1;
+} */
