--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ header {
     padding-left: 10px;
 }
 
-.settings {
+.settings-icon {
     padding-right: 10px;
     cursor: pointer;
 }
@@ -65,6 +65,7 @@ GAME BOARD
 
 main {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
 }
 
@@ -105,6 +106,7 @@ h3 {
     margin-bottom: 10px;
 }
 
+
 /****************************************
 SETTINGS
 ****************************************/
@@ -121,6 +123,41 @@ SETTINGS
 
 
 .settings-show {
-    width: 250px
+    width: 150px;
 }
+
+.themes {
+    position: relative;
+    top: 10px;
+    width: 100%;
+    background: none;
+    border: none;
+    cursor: inherit;
+    text-align: left;
+    font-size: 16px;
+    height: 30px;
+}
+
+.themes:hover {
+    background-color: rgb(221, 216, 216);
+}
+
+.dropdown-menu {
+    list-style-type: none;
+    padding-left: 10px;
+    visibility: collapse;
+}
+
+.dropwdown-show {
+    visibility: visible;
+}
+
+
+li {
+    margin-bottom: 4px;
+    cursor: pointer;
+}
+
+
+
 
