--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-weight: bold;
 }
 
 .home {
@@ -132,14 +133,10 @@ SETTINGS
     width: 100%;
     background: none;
     border: none;
-    cursor: inherit;
+    cursor: pointer;
     text-align: left;
     font-size: 16px;
     height: 30px;
-}
-
-.themes:hover {
-    background-color: rgb(221, 216, 216);
 }
 
 .dropdown-menu {
@@ -156,6 +153,10 @@ SETTINGS
 li {
     margin-bottom: 4px;
     cursor: pointer;
+}
+
+li:hover {
+    background-color: rgb(221, 216, 216);
 }
 
 
