--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-    background-color: black;
+    background-color: #1B1F3A;
+    color: #F2B950;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -13,7 +14,8 @@ HEADER BAR
 ****************************************/
 
 header {
-    background-color: lightblue;
+    background-color: #008F9F;
+    color: #F2F2F2;
     width: 100%;
     height: 8%;
     top: 0;
@@ -73,7 +75,7 @@ main {
 .board-overlay {
     outline-width: 3px;
     outline-style: solid;
-    outline-color: black;
+    outline-color: #1B1F3A;
     outline-offset: -3px;
 }
 
@@ -88,10 +90,9 @@ main {
 .square {
     border-width: 3px;
     border-style: solid;
-    border-color:lightblue;
+    border-color: #F97E11;
     display: grid;
     place-items: center;
-    color: white;
 }
 
 .win {
@@ -115,7 +116,8 @@ SETTINGS
 ****************************************/
 
 .settings-menu {
-    background-color: lightblue;
+    background-color: #008F9F;
+    color: #F2F2F2;
     height: 100%;
     right: 0;
     top: 8%;
@@ -133,6 +135,7 @@ SETTINGS
 
 button {
     position: relative;
+    color: #F2F2F2;
     top: 10px;
     width: 100%;
     background: none;
@@ -161,6 +164,10 @@ li {
 
 li:hover {
     background-color: rgb(221, 216, 216);
+}
+
+li.selected {
+    background-color: grey;
 }
 
 
