--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ SETTINGS
 
 
 .settings-show {
-    width: 120px;
+    width: 140px;
 }
 
 button {
@@ -164,7 +164,7 @@ li {
 }
 
 li:hover {
-    background-color: rgb(221, 216, 216);
+    filter:brightness(80%)
 }
 
 
