--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ SETTINGS
 
 
 .settings-show {
-    width: 140px;
+    width: 150px;
 }
 
 button {
@@ -166,6 +166,65 @@ li {
 li:hover {
     filter:brightness(80%)
 }
+
+/* toggle-switch */
+.multiplayer {
+    width: 100%;
+    height: 70px;
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
+    padding-top: 20px;
+    font-size: 18px;
+    font-weight: 900;
+}
+
+span {
+    font-size: 16px;
+}
+
+/* Hide default HTML checkbox */
+input[type=checkbox]{
+	height: 0;
+	width: 0;
+	visibility: hidden;
+}
+
+label {
+	cursor: pointer;
+	text-indent: -9999px;
+	width: 40%;
+	height: 30px;
+	background: grey;
+	display: block;
+	border-radius: 100px;
+	position: relative;
+}
+
+label:after {
+	content: '';
+	position: absolute;
+	left: 0.1px;
+	width: 30px;
+	height: 30px;
+	background: #fff;
+	border-radius: 30px;
+	transition: 0.3s;
+}
+
+input:checked + label {
+	background: #bada55;
+}
+
+input:checked + label:after {
+	left: calc(100%);
+	transform: translateX(-100%);
+}
+
+label:active:after {
+	width: 130px;
+}
+
 
 
 
