--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: #1B1F3A;
+    width: 100%;
     color: #F2B950;
     display: flex;
     flex-direction: column;
@@ -7,6 +8,7 @@ body {
     justify-content: center;
     align-items: center;
     font-family: 'Work Sans', sans-serif;
+    margin: 0
 }
 
 /****************************************
@@ -19,6 +21,7 @@ header {
     width: 100%;
     height: 8%;
     top: 0;
+    left: 0;
     position: absolute;
     display: flex;
     justify-content: space-between;
@@ -119,48 +122,50 @@ SETTINGS
     background-color: #008F9F;
     color: #F2F2F2;
     height: 100%;
-    right: 0;
     top: 8%;
+    right: 0; 
     position: absolute;
     width: 0px; 
-    transition: width 1s;
+    transition: width 0.7s;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
+    visibility: collapse;
 }
 
 
 .settings-show {
-    width: 150px;
+    width: 160px;
+    visibility: visible;
 }
 
-button {
+.menu-header {
     position: relative;
     color: #F2F2F2;
     top: 10px;
+    left: 5px;
     width: 100%;
     background: none;
     border: none;
-    cursor: pointer;
     text-align: left;
     font-size: 16px;
     height: 30px;
+    font-size: 20px;
+    font-weight: bold;
+    padding-top: 20px;
 }
 
-.dropdown-menu {
+.menu-list {
     list-style-type: none;
     padding-left: 0px;
-    display: none;
-}
-
-.dropwdown-show {
-    display: block;
-    text-align: center;
 }
 
 li {
     margin-bottom: 4px;
     cursor: pointer;
-    padding: 5px;
+    padding: 5px 0px 5px 15px;
+    width: 150px;
+    position: relative;
 }
 
 li:hover {
@@ -170,20 +175,13 @@ li:hover {
 /* toggle-switch */
 .multiplayer {
     width: 100%;
-    height: 70px;
+    height: 80px;
     display: flex;
     flex-direction: column;
-    padding-left: 10px;
-    padding-top: 20px;
-    font-size: 18px;
-    font-weight: 900;
+    padding-top: 10px;
+    padding-left: 5px;
 }
 
-span {
-    font-size: 16px;
-}
-
-/* Hide default HTML checkbox */
 input[type=checkbox]{
 	height: 0;
 	width: 0;
@@ -210,10 +208,6 @@ label:after {
 	background: #fff;
 	border-radius: 30px;
 	transition: 0.3s;
-}
-
-input:checked + label {
-	background: #bada55;
 }
 
 input:checked + label:after {
